<resources>
    <string name="app_name">DiarioEscolar</string>
    <string name="preference_file_key">aniverlembre.com.diarioescolar.PREFERENCE_FILE_KEY</string>
    <string name="diary">Class</string>
    <string name="manager">Manager</string>
    <string name="labelStudent">Estudante</string>
    <string name="labelName">Nome</string>
    <string name="hintName">Insira o nome</string>
    <string name="grade_01">Nota 01</string>
    <string name="grade_02">Nota 02</string>
    <string name="grade_03">Nota 03</string>
    <string name="hintGrade">0.0</string>
    <string name="labelButtonAdd">Adicionar</string>
    <string name="n1">N1</string>
    <string name="n2">N2</string>
    <string name="n3">N3</string>
    <string name="salve">Salvar</string>
</resources>